CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(INVERSE_PARAMETRIC)
FILE(GLOB source *.cpp)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")
INCLUDE_DIRECTORIES(/usr/local/include/eigen3)
ADD_EXECUTABLE(demo ${source})
# TARGET_INCLUDE_DIRECTORIES(demo PUBLIC /usr/local/include/eigen3)

SET(EXECUTABLE_OUTPUT_PATH "bin")
